# QuickDocSearchEngine

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: cpp-httplib  cppjieba  http_server.cpp  server.cpp
src/index/: index.cpp  index.h  index.hpp  jieba_util.hpp  search.hpp
src/parser/: CMakeLists.txt  html_util.cpp  html_util.h  parser.cpp
wwwroot/: index.html
